--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: adrop_ads_admob
-description: AdropAds flutter plugin for Admob mediation
-version: 0.1.0-dev.1
+description: AdropAds Flutter plugin for Admob mediation, supporting banner
+version: 0.1.0
 publisher: dev@openrhapsody.com
 homepage: https://adrop.io
 repository: https://github.com/OpenRhapsody/adrop_ads_admob
@@ -10,7 +10,7 @@ environment:
   flutter: '>=3.3.0'
 
 dependencies:
-  adrop_ads_flutter: ^0.5.0-dev.1
+  adrop_ads_flutter: ^0.5.0
   flutter:
     sdk: flutter
   google_mobile_ads: ^5.1.0
